# translate-pipeline

./: README.md  load_data.py  main.py  pyproject.toml  setup_vllm.py  start_vllm.py
data/: professional_psychology.json
workflow/: prompt.py
workflow/graph/: builder.py  stage.py
workflow/node/: evaluate.py  rule_check.py  translate_en_vi.py  translate_vi_en.py
workflow/utils/: model_loader.py  token_counter.py
