[project]
name = "translate-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.8.4",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.0",
    "langgraph>=1.1.8",
    "nltk>=3.9.4",
    "sentence-transformers>=5.4.1",
    "torch>=2.11.0",
    "transformers>=5.5.4",
]
